--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 layout: home
 title: Home
 ---
-<h1>Welcome to my SciTech portfolio website!</h1>
-<p>This website is dedicated to my project work and for fulfilling my SciTech portfolio requirements.</p>
+
+# Welcome to my SciTech portfolio website!
+
+This website is dedicated to my project work and for fulfilling my SciTech portfolio requirements.
